# staking-ui

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
app/: main.ts
app/client/: client.ts
app/setup/: config.json  config.ts  createMint.ts  pda.ts  uiConfig.ts  utils.ts
programs/wmp-staking/: Cargo.toml
programs/wmp-staking/src/: lib.rs  rewards.rs
tests/: wmp-staking.js  wmp-staking.ts
ui/: index.html
ui/css/: jquery-ui.css  jquery-ui.min.css  jquery-ui.structure.min.css  jquery-ui.theme.min.css  style.css
ui/js/: jquery-ui.js  jquery-ui.min.js
ui/src/: constants.ts  handlers.ts  idl.json  main.ts  render.ts  splToken.ts  stakingProgram.ts  state.ts  wallet.ts
